20031105 event.[ch], z80/z80.[ch], z80/z80.pl: prevent interrupts from
	 being accepted immediately after an EI.
20031106 event.[ch]: always reenable interrupts before sampling if both
	 events occur at the same tstate.
20031106 event.[ch], machine.c, rzx.c, scld.c, spectrum.[ch], z80/z80.c,
	 z80/z80_ops.c: add support for retriggered interrupts.
20031106 debugger/command.c, debugger/commandl.l: remove use of %option
	 noyywrap.
20031107 ui/uijoystick.c: fix typos (thanks, Erik Kunze).
20031107 event.[ch], spectrum.c, z80/coretest.c, z80/z80.[ch], z80/z80.pl:
	 improved retrigged interrupt support: interrupts no longer
	 accepted after an EI/EI or EI/DI sequence.
20031107 snapshot.c: use libspectrum's support for the 'last instruction
	 EI' flag.
20031111 event.c, z80/z80.[ch]: further changes to the interrupt code to
	 allow old Fuse recordings to play back successfully.
20031112 memory.c, z80/Makefile.am, z80/coretest.c, z80/harness.pl,
	 z80/z80.pl, z80/z80_macros.h, z80/tests/: Z80 core improvements
	 to reduce the number of calls made to contend_memory().
20031113 printer.c: readbyte() should be readbyte_internal().
20031114 Make the memory access routines both simpler and more flexible.
	 TODO: TC2068 routines.
20031114 memory.[ch], z80/z80.pl, z80/z80_ops.c: macroise
         readbyte_internal().
20031114 Remove use of *_contend_memory().
20031114 Precalculate the contention at every tstate.
20031115 event.c, rzx.c, timer.[ch], ui/ui.h, ui/gtk/statusbar.c,
	 widget/widget.c: add current emulation speed to GTK+ statusbar.
20031116 fuse.c, timer.[ch]: better speed estimation just after emulation
	 unpause (or startup).
20031117 memory.h, scld.c, tape.c, tc2068.c: get TC2068 memory routines
	 working again.
20031118 ui/gtk/gtkui.c: make speed estimates work properly after the GTK+
	 pause function is used.
20031119 Merge the 'generic' and TC2068 paging schemes.
20031120 psg.c: write pause lengths out correctly.